# haskell-fullstack-boilerplate

./: .envrc  .gitignore  .gitmodules  LICENSE  cabal.project  default.nix  hie.yaml  packages.nix  shell.nix
backend/: CHANGELOG.md  backend.cabal
common/: CHANGELOG.md  LICENSE  common.cabal
frontend/: CHANGELOG.md  frontend.cabal
scripts/: .build-env  .gitignore  cabal-build-backend-ghc  cabal-build-frontend-ghcjs  nix-build-backend-ghc  nix-build-frontend-ghcjs  nix-shell-ghc  nix-shell-ghcjs  reflex-shell
