name:                backend
version:             0.0.0.1
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              DCM
maintainer:          vcs@armarti.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable backend
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13,
                       common,
                       reflex-dom
  hs-source-dirs:      src
  default-language:    Haskell2010
